[package]
name = "vtlut-110"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
bincode = "1.3.3"
bytemuck = "1.12.1"
serde = "1.0.147"
serde_json = "1.0.87"
solana-client = "~1.10"
solana-program = "~1.10"
solana-sdk = "~1.10"
solana-transaction-status = "~1.10"
thiserror = "1.0.37"
